# internal/api/rest/users_handler.go
@@ -94,6 +94,9 @@ func (h UsersHandler) GetUsers(ctx context.Context, request GetUsersRequestObjec
 	urlBuilder := func(page, size int32) string { return fmt.Sprintf("/api/v1/users?page=%d&size=%d", page, size) }
 	self := urlBuilder(page, size)
 	prev := urlBuilder(page-1, size)
+	first := urlBuilder(0, size)
+	//gosec:disable G115 -- Not expecting to overflow
+	last := urlBuilder(int32(pageUsers.TotalPages()-1), size)
 
 	next := urlBuilder(page+1, size)
 	if page == 0 {
@@ -116,6 +119,8 @@ func (h UsersHandler) GetUsers(ctx context.Context, request GetUsersRequestObjec
 			Self:       self,
 			Prev:       prev,
 			Next:       next,
+			First:      first,
+			Last:       last,
 		},
 		Metadata: RequestMetadata{
 			Environment: h.cfg.Env,
